<resources>
    <string name="app_name">Доска объявлений</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- Drawer menu-->
    <string name="advert_cat1">Объявления</string>
    <string name="advert_my_ads">Мои объявления</string>
    <string name="advert_car">Машины</string>
    <string name="advert_pc">Компьютеры</string>
    <string name="advert_smartphones">Смартфоны</string>
    <string name="advert_home_tech">Бытовая техника</string>

    <string name="advert_cat2">Аккаунт</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>

    <!-- Sign-->
    <string name="email_hint">E-mail</string>
    <string name="email_reset_pass_was_sent">Reset E-mail was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля введите e-mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться!</string>
    <string name="sign_in_error">Не удалось войти!</string>
    <string name="send_verification_error">Не удалось отправить e-mail для подтверждения</string>
    <string name="send_verification_done">На Вашу почту отправлена ссылка для подтверждения e-mail</string>



    <!-- -->
    <string name="link_done">Email успешно подключен к Google аккаунту</string>
    <string name="link_not_done">Войдите в Google account перед регистрацией по данному email</string>


    <!--Edit activity  поиск городов...-->
    <string name="no_result">Не результатов</string>
    <string name="select_country">*Выберите страну</string>
    <string name="country">Страна</string>
    <string name="select_city">*Выберите город</string>
    <string name="city">Город</string>
    <string name="no_country_selected">*Не выбрана страна</string>
    <string name="index">Индекс</string>
    <string name="phone">Телефон</string>
    <string name="phone_number_hint">*Номер телефона</string>
    <string name="index_hint">*Индекс</string>
    <string name="description_hint">*Описание</string>
    <string name="description">Описание</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="category">Категория</string>
    <string name="price_hint">*Укажите цену</string>
    <string name="price">Цена</string>
    <string name="with_sent">С отправкой</string>
    <string name="with_sent2">Отправка</string>
    <string name="publish">Опубликовать</string>


</resources>