<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ac_sign_up"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSignEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMaessage" />

    <EditText
        android:id="@+id/etSignPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/etSignEmail" />

    <Button
        android:id="@+id/btSignUpIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="-8dp"
        android:text="@string/sign_up_action"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/btGoogleSignIn" />

    <Button
        android:id="@+id/btForgetPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/btGoogleSignIn" />

    <TextView
        android:id="@+id/tvDialogMaessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_reset_email_message"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvSignTitle" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btGoogleSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:buttonSize="standard"
        app:layout_constraintEnd_toEndOf="@+id/btSignUpIn"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btSignUpIn"
        app:layout_constraintTop_toBottomOf="@+id/etSignPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>