<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey_dark"
    tools:context=".act.EditAdsAct">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpImages"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.viewpager2.widget.ViewPager2>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/edit_image_button"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:onClick="onClickGetImages"
                        android:padding="0dp"
                        app:layout_constraintEnd_toEndOf="@+id/vpImages"
                        app:layout_constraintTop_toTopOf="@+id/vpImages"
                        app:srcCompat="@drawable/ic_edit"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ProgressBar
                        android:id="@+id/pBarLoad"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/vpImages"
                        app:layout_constraintEnd_toEndOf="@+id/vpImages"
                        app:layout_constraintStart_toStartOf="@+id/vpImages"
                        app:layout_constraintTop_toTopOf="@+id/vpImages" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/country"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:minHeight="48dp"
                        android:onClick="onClickSelectCountry"
                        android:padding="10dp"
                        android:text="@string/select_country"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/color_green"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/city"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:minHeight="48dp"
                        android:onClick="onClickSelectCity"
                        android:padding="10dp"
                        android:text="@string/select_city"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/color_green"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitlePhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/phone"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/phone_number_hint"
                        android:inputType="number|numberDecimal"
                        android:minHeight="35dp"
                        android:textColorHint="@color/color_grey_2dark"
                        android:textSize="16dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <LinearLayout
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/color_green"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/index"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/index_hint"
                        android:inputType="number|numberDecimal"
                        android:minHeight="35dp"
                        android:textColorHint="@color/color_grey_2dark"
                        android:textSize="16dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <LinearLayout
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/color_green"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleSent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:text="@string/with_sent2"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/checkBoxWithSent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/with_sent" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/category"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:minHeight="48dp"
                        android:onClick="onClickSelectCategory"
                        android:padding="10dp"
                        android:text="@string/select_category"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider6"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/color_green"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/tvTitlePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/price"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/price_hint"
                        android:inputType="number|numberDecimal"
                        android:minHeight="35dp"
                        android:textColorHint="@color/color_grey_2dark"
                        android:textSize="16dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <LinearLayout
                        android:id="@+id/divider7"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/color_green"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/description"
                        android:textColor="@color/color_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/description_hint"
                        android:minHeight="35dp"
                        android:textColorHint="@color/color_grey_2dark"
                        android:textSize="16dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <LinearLayout
                        android:id="@+id/divider8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="4dp"
                        android:background="@color/color_green"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btPublish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:onClick="onClickPublish"
                android:text="@string/publish"
                android:textColor="@color/color_green" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>